--- a/templates/content/search.html
+++ b/templates/content/search.html
@@ -32,8 +32,8 @@ Search
 
           <!-- Componentes do formulário -->          
           <div class="search-el">
-            <input type="text" id="id-search" class="search-bar form-control" aria-describedby="button-addon2" name="search" value="">
-            <button class="btn btn-warning search-button" type="submit" id="button-addon2">Buscar</button>
+            <input type="text" id="id-search" class="search-bar form-control" aria-describedby="search-button" name="search" value="">
+            <button class="btn btn-warning search-button" type="submit" id="search-button">Buscar</button>
           </div>
 
           <!-- Parâmetros de busca -->
