--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -2,7 +2,7 @@
 <header class="container-flex" style="height: 50px;">
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a href="/"><span class="navbar-brand mb-0 h1">Nostradamus</span></a>
+      <a href="/"><span class="navbar-brand mb-0 h1">FRONTADAMUS</span></a>
     </div>
   </nav>
 </header>
