Implementar output da busca no console para completar a implementação futuramente

--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -16,7 +16,7 @@ include 'layout/header.html' %} {% block content%}
           <div class="input-group">
             <form style="align-items: center; display: flex">
               <input type="text" class="form-control" aria-describedby="button-addon2"
-                style="height: 38px; font-size: 15px" name="search" />
+                style="height: 38px; font-size: 15px" name="busca" />
               <button class="btn btn-outline-dark" style="margin-left: 15px" type="submit" id="button-addon2"
                 style="height: 30px; font-size: 15px; color: white">
                 Buscar
