--- a/templates/content/search-restore.html
+++ b/templates/content/search-restore.html
@@ -1,3 +1,46 @@
-{% extends 'layout/layout.html' %} {% block title %} Recuperação de Busca {% endblock %} {%
-    include 'layout/header.html' %} {% block content%}
+{% extends 'layout/layout.html' %}
 
+{% block title %}
+Recuperar Busca  
+{% endblock %}
+
+{% include 'layout/header.html' %}
+
+{% block content%}   
+    <div class="background-nostradamus style-nostradamus row"> 
+      <div class="col-12">        
+        <form id="form-default" style="display: flex; flex-direction: column; align-items: center;">
+          <!-- Alerta performático -->
+          <div class="alerta-perfomartico hidden-anything" id="alerta">
+            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+              <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </symbol>
+            </svg>
+            <div class="alert alert-warning d-flex align-items-center" role="alert">
+              <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+              <div id="alerta-mensagem">
+                É necessário informar algum termo no campo de busca, exemplo: <strong>Technology</strong>                
+              </div>
+              <button type="button" class="btn-close" id="btn-close" data-bs-dismiss="alert" aria-label="Close" style="margin-left: 30px;"></button>
+            </div>
+          </div>
+          <!-- fim -->
+          
+          <!-- Texto principal - Nostradamus -->
+          <h1 class="titulo-principal" style="color:white; margin-bottom: 0.2em; font-size: 100px;">Nostradamus</h1>
+
+          <!-- Componentes do formulário -->          
+          <div class="search-el">
+            <input type="text" id="id-search-restore" class="restore-search-bar form-control" aria-describedby="button-addon2" name="busca-token" value="">
+            <button class="btn btn-warning restore-search-button" type="button" id="button-addon2" onclick="puxarResultado()">Recuperar Busca</button>
+          </div>
+        </form>
+      </div>
+      <!-- PréLoader -->      
+      <button class="btn btn-dark hidden-anything mt-3" id="preloader" type="button" style="width: 200px; font-size: 15px;" disabled>
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Buscando dados...
+      </button>
+    </div>
+{% endblock %}
