--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -33,7 +33,8 @@ include 'layout/header.html' %} {% block content%}
           <p class="mb-1" style="font-size: 15px">
             Quantidade de Artigos por Ano de Publicação:
           </p>
-          <span class="anos-pub" id="#location-anos">
+          <span class="anos-pub" id="location-anos">
+          <br> <!-- Não remover em hipótese alguma, irá quebrar a página -->
             <!-- {% for ano in total_anos %}
             <button type="button" class="btn btn-warning position-relative mt-3 mx-2 p-1" style="font-size: 15px">
               {{ ano[0] }}
