--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -28,7 +28,7 @@ include 'layout/header.html' %} {% block content%}
       </a>
 
       <a href="#" class="list-group-item list-group-item-action mt-3">
-        <div onload="buscarAtravesToken()">
+        <div onload="retornarTodosOsDadosDePesquisa()">
           <h2 class="mb-1" style="font-size: 15px">Anos de Publicação</h2>
           <p class="mb-1" style="font-size: 15px">
             Quantidade de Artigos por Ano de Publicação:
