--- a/templates/content/search-restore.html
+++ b/templates/content/search-restore.html
@@ -32,8 +32,8 @@ Recuperar Busca
 
           <!-- Componentes do formulário -->          
           <div class="search-el">
-            <input type="text" id="id-search-restore" class="restore-search-bar form-control" aria-describedby="button-addon2" name="busca-token" value="">
-            <button class="btn btn-warning restore-search-button" type="button" id="button-addon2" onclick="puxarResultado()">Recuperar Busca</button>
+            <input type="text" id="id-search-restore" class="restore-search-bar form-control" aria-describedby="button-addon2" name="consultaToken" value="">
+            <button class="btn btn-warning restore-search-button" type="button" id="button-addon2" onclick="buscarToken()">Recuperar Busca</button>
           </div>
         </form>
       </div>
