--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -7,7 +7,7 @@ include 'layout/header.html' %} {% block content%}
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1" style="font-size: 15px">
             O termo de busca foi: 
-            <div id="token-busca"></div>
+            <h5 id="token-busca"></h5>
           </h5>
         </div>
         <p class="mb-2" style="font-size: 15px">
