Implementar a função para exibir os anos no resultados (JS) [3/3]

--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -39,15 +39,7 @@ window.addEventListener('load', function () {
             Quantidade de Artigos por Ano de Publicação:
           </p>
           <span class="anos-pub" id="location-anos">
-          <br> <!-- Não remover em hipótese alguma, irá quebrar a página -->
-            <!-- {% for ano in total_anos %}
-            <button type="button" class="btn btn-warning position-relative mt-3 mx-2 p-1" style="font-size: 15px">
-              {{ ano[0] }}
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                {{ ano[1] }}
-              </span>
-            </button>
-            {% endfor %} -->
+          <br style="display: none"> <!-- Não remover em hipótese alguma, irá quebrar a página -->
           </span>
         </div>
       </a>
