--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -52,17 +52,9 @@ window.addEventListener('load', function () {
     <h1 style="color: white">N-gramas:</h1>
     <div style="height: calc(50vh - 50px); overflow-y: auto; background-color: rgba(255, 255, 255, 0.2);">
       <div class="border border-round border-secondary p-1">
-        <div style="margin: 0 auto; background-color: rgba(255, 255, 255, 0.2)" id="div1" ondrop="drop(event)"
+        <div style="margin: 0 auto; background-color: rgba(255, 255, 255, 0.2)" id="location-ngramas" ondrop="drop(event)"
           ondragover="allowDrop(event)">
-          {% for ngrama in resultados_ngramas %}
-          <button type="button" class="btn btn-warning position-relative mt-3 mx-2 p-1" style="font-size: 15px"
-            id="{{loop.index}}" draggable="true" ondragstart="drag(event)">
-            <span>{{ ngrama[0][0] }} {{ ngrama[0][1] }}</span>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-light text-dark">
-              {{ ngrama[1] }}
-            </span>
-          </button>
-          {% endfor %}
+          <br style="display: none"> <!-- Não remover em hipótese alguma, irá quebrar a página -->
         </div>
       </div>
     </div>
@@ -70,7 +62,7 @@ window.addEventListener('load', function () {
     <h1 style="color: white">Assuntos (Subjects):</h1>
     <div class="mt-3" style="height: calc(40vh - 50px); overflow-y: auto; background-color: rgba(255, 255, 255, 0.2);">
       <div class="border border-round border-secondary p-1">
-        <div style="margin: 0 auto; background-color: rgba(255, 255, 255, 0.2)" id="div1" ondrop="drop(event)"
+        <div style="margin: 0 auto; background-color: rgba(255, 255, 255, 0.2)" id="location-subjects" ondrop="drop(event)"
           ondragover="allowDrop(event)">
           {% for assunto in total_assuntos %}
           <button type="button" class="btn btn-light position-relative mt-3 mx-2 p-1" style="font-size: 15px"
