Reimplementar o sumido grafico treemap para termos mais comuns

--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -74,7 +74,7 @@ window.addEventListener('load', function() {
       <button class="grid-item btn btn-warning" id="btn-classification" onclick="createClassification()">
         Criar Classificação
       </button>
-      <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modal-termos-comuns">
+      <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modal-termos-comuns" onclick="mostrarGraficoTreemap()">
         Ver termos mais comuns
       </button>
       <button type="button" class="btn btn-warning" data-bs-toggle="modal"
