--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -79,7 +79,7 @@ window.addEventListener('load', function() {
       </button>
       <button type="button" class="btn btn-warning" data-bs-toggle="modal"
         data-bs-target="#modal-download-classificacoes" id="btn-download" onclick="parseDados(printResult())">
-        Download
+        Gerar Treemap
       </button>
     </span>
   </div>
