--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -145,12 +145,16 @@ window.addEventListener('load', function() {
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="label-modal-busca-pendente">Busca Pendente </h1>
+            <h1 class="modal-title fs-5" id="label-modal-busca-pendente">Busca Pendente []</h1>
             <button type="button" class="btn-close" onclick="esconderModal()" aria-label="Close"></button>
           </div>
           <div class="modal-body" id="texto-modal">
             <br style="display: none;">
             Efetuando busca...
+          </div>
+          <br>
+          <div>
+            Ou salve o código da sua busca e efetue a consulta em outro momento.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-warning" onclick="recarregarBusca()">Recarregar</button>
