teste modal body

--- a/templates/content/result.html
+++ b/templates/content/result.html
@@ -153,11 +153,9 @@ window.addEventListener('load', function() {
             Efetuando busca...
           </div>
           <br>
-          <div>
-            Ou salve o código da sua busca e efetue a consulta em outro momento.
-          </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-warning" onclick="recarregarBusca()">Recarregar</button>
+            Ou salve o código da sua busca e efetue a consulta em outro momento.
+            <!--<button type="button" class="btn btn-warning" onclick="recarregarBusca()">Recarregar</button>-->
           </div>
         </div>
       </div>
